更新 generate-adguard-rules.yml

--- a/.github/workflows/generate-adguard-rules.yml
+++ b/.github/workflows/generate-adguard-rules.yml
@@ -38,10 +38,10 @@ jobs:
         
     - name: 处理日志并生成规则
       run: |
-        python process_adguard_logs.py adguard_logs adguard_rules -m 1
+        python extract_and_generate_rules.py adguard_logs/*.json -o adguard_rules/filtered_rules.txt
         
     - name: 上传规则文件
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # 已更新为v4版本
       with:
         name: adguard-generated-rules
         path: adguard_rules/
@@ -55,4 +55,3 @@ jobs:
         git commit -m "Auto-update rules: $(date +\%Y-\%m-\%d)"
         git push
       continue-on-error: true
-    
